# WebRag

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
backend/: __init__.py  chat_store.py  deep_research.py  reranker.py  retriever.py  web_search.py
data_ingestion/: __init__.py  chunking_embedding.py  ingestion_pipeline.py  text_extraction  text_extraction.py  vector_store.py
embedding/: __init__.py  embedder.py  modernbert.py
frontend/: __init__.py  app.py  question_answering.py  test_accessability.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: index.html
llm/: __init__.py  llama_3_1.py  llm.py
utils/: env_loader.py  logging_config.py  utilities.py
